# WebAppTemplate_w_API_Swagger

./: config.json
api/: README.md  openapi.bat  openapi.yaml  package-lock.json  package.json  requirements.txt
api/resources/: Object.yaml  Objects.yaml
api/responses/: Created.yaml  Deleted.yaml  NullResponse.yaml  UnexpectedError.yaml  Updated.yaml  _index.yaml
api/schemas/: Information.yaml  Object.yaml  _index.yaml
backend/: .openapi-generator-ignore  README.md  docker-compose.yaml  openapi.yaml  setup.cfg
backend/.openapi-generator/: FILES
backend/project_api/: __main__.py  main.py  security_api.py
backend/project_api/apis/: con_settings.py  object_api.py
backend/project_api/models/: information.py  object.py
backend/src/openapi_server/: __main__.py  main.py
backend/src/openapi_server/apis/: con_settings.py  object_api.py
backend/src/openapi_server/models/: object.py
backend/tests/: conftest.py  test_object_api.py
frontend/: .gitignore  .openapi-generator-ignore  index.ts  package-lock.json  package.json  runtime.ts  tsconfig.json
frontend/.openapi-generator/: FILES
frontend/public/: index.html
frontend/src/: .openapi-generator-ignore  App.tsx  index.tsx  runtime.ts
frontend/src/.openapi-generator/: FILES
frontend/src/apis/: ObjectApi.ts  index.ts
frontend/src/models/: Information.ts  ModelError.ts  ModelObject.ts  index.ts
frontend/src/pages/: createObject.tsx  editObject.tsx  error.tsx  home.tsx  objectInfo.tsx  objects.tsx  serviceError.tsx
frontend/src/pages/components/: menu.css  menu.tsx  objectsTable.tsx
(+1 files in other folders)
