[metadata]
name = project_api
version = 0.1.9
description = API for config.json in project
long_description = file: README.md
keywords = OpenAPI Project API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =
packages = find_namespace:

[options.packages.find]
where = 
